--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.1",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.3",
