--- a/package.json
+++ b/package.json
@@ -1,17 +1,9 @@
 {
-  "name": "oluwaseunsodeeq",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
   "dependencies": {
     "@formspree/react": "^2.5.1",
     "framer-motion": "^11.0.6",
+    "gh-pages": "^6.3.0",
+    "install": "^0.13.0",
     "intersection-observer": "^0.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
