--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "oluwaseunsodeeq",
+  "homepage": "https://oluwaseunsodeeq.github.io/",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
     "@formspree/react": "^2.5.1",
     "framer-motion": "^11.0.6",
@@ -32,4 +40,5 @@
     "vite": "^5.1.0",
     "vite-plugin-eslint": "^1.8.1"
   }
+  
 }
